2011-01-11  Eric Seidel  <eric@webkit.org>

        Unreviewed.

        commit-queue should know how to upload archived results (for test flakes or general failures)
        https://bugs.webkit.org/show_bug.cgi?id=52048

        I changed the API for archive_last_layout_test_results w/o updating the implementation.  Oops.
        This fixes an exception seen on the commit-queue when attempting to report flaky tests.

        * Scripts/webkitpy/common/system/workspace.py:
        * Scripts/webkitpy/common/system/workspace_unittest.py:
        * Scripts/webkitpy/tool/commands/queues.py:

2011-01-11  Sam Weinig  <sam@webkit.org>

        Roll r75474 back in.

2011-01-11  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Remove uses of QFuture since it isn't supported on all platforms.
        https://bugs.webkit.org/show_bug.cgi?id=51204

        * QtTestBrowser/webpage.h:
        (QtNAMThread::QtNAMThread):
        (QtNAMThread::networkAccessManager):
        (QtNAMThread::run):

2011-01-11  Peter Varga  <pvarga@webkit.org>

        Unreviewed.

        Add myself to committers' list.

        * Scripts/webkitpy/common/config/committers.py:

2011-01-11  Eric Seidel  <eric@webkit.org>

        Reviewed by Adam Barth.

        commit-queue should know how to upload archived results (for test flakes or general failures)
        https://bugs.webkit.org/show_bug.cgi?id=52048

        Now the queue will always upload results.  Either the entire zip, or just
        the diffs.txt in the case of text failures.

        This should make understanding flakes much easier, and paves the way
        for having the EWS run layout tests (and upload failures).

        In order to upload .zip files I had to teach bugzilla.py to autodetect
        mime types from the filename.  Since mimetypes.py doesn't include a mapping
        for .patch files, I have it add one before calling guess_type.
