@@ -70,5 +70,4 @@ class WebKitCheckout(object):
         return self._scm.checkout_root
 
     def create_patch(self, git_commit, changed_files=None):
-        # FIXME: SCM.create_patch should understand how to handle None.
-        return self._scm.create_patch(git_commit, changed_files=changed_files or [])
+        return self._scm.create_patch(git_commit, changed_files=changed_files)
